<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dashboard"
    tools:context=".Donate">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginTop="135dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_namedonate"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="75dp"/>

    <EditText
        android:id="@+id/editTextName_d"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/your_name_donate_activity"
        android:inputType="text"
        android:maxLength="15"
        android:minHeight="50dp"
        android:textColor="@color/white"
        android:textColorHint="#78909C"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_food_items_donate"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="55dp"/>

    <EditText
        android:id="@+id/editTextFoodItems"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/food_items_donate_activity"
        android:inputType="text"
        android:maxLength="100"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="#78909C"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_number_doante"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"/>

    <EditText
        android:id="@+id/editTextPhoneNumber_d"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="15"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="#78909C"
        android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Donation pickup address"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="40dp"/>

        <EditText
            android:id="@+id/editTextaddress"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:hint="Address"
            android:inputType="text"
            android:maxLength="30"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#78909C"
            android:autofillHints="" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDonate"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/donate_donate_activity"
        android:textSize="18sp"
        android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>

