<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard"
    tools:context=".Receive">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="150dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_receiver_name_receivexml"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="75dp"/>

        <EditText
            android:id="@+id/editTextName_R"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/your_name_donate_activity"
            android:inputType="text"
            android:maxLength="40"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:background="@drawable/custom_input"
            android:textColorHint="#78909C"
            android:autofillHints=""
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_phone_number_doante"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="40dp"/>

        <EditText
            android:id="@+id/editTextPhoneNumber_R"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="15"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:background="@drawable/custom_input"
            android:textColorHint="#78909C"
            android:autofillHints=""
            android:padding="5dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRecv"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/receive_btn"
            android:textSize="18sp"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>